# uvat-wasm-demo

./: Cargo.toml  Readme.md  index.html  uvat-wasm-demo-32d744de6b31ab58.js  uvat-wasm-demo-39641eecc3178014.js  uvat-wasm-demo-52969c41c4579eae.js  uvat-wasm-demo-58afd0a39d18f446.js  uvat-wasm-demo-60313ac8a3707445.js  uvat-wasm-demo-7594e25f649ea50c.js  uvat-wasm-demo-80133ce1d0bb5c52.js  uvat-wasm-demo-9f8291591a5a5bf.js  uvat-wasm-demo-dfa0d815943e8466.js
.github/workflows/: deploy.yml
snippets/deuxfleurs-ce5ae6692bdb31f2/src/: save.js
src/: main.rs
