[package]
name = "uvat-wasm-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
uvat-rs = { git = "https://github.com/Lieunoir/uvat-rs", rev = "88e8a0e" }
deuxfleurs = { git = "https://github.com/Lieunoir/deuxfleurs", rev = "7bbf84c" }
faer = "0.22.4"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
